# soc-econ-up

./: .env  LICENSE  README.md  config.py  pyproject.toml
analz/dashapps/: aicards.py  ara_ai.py  dataUtils.py  graphs.py  markdowns.py
analz/soc_econ/: wv_data_utils.py
analz/soc_econ/.ipynb_checkpoints/: wv_data_utils-checkpoint.py
analz/soc_econ/labor_div/: jobs.py
app/: __init__.py  routes.py  sumlog.py
app/static/: er.html  gdp_page.html  index.html  player.html
app/templates/: er.html  er_manager.html  erbase.html  menu.html  rc_analytics.html  reporter.html  wp.html
