[tool.poetry]
name = "soceconup"
version = "0.1.0"
description = "test to pythonanywhere"
authors = ["johncwshc <jcase4218@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.2"
Flask = "^3.0.3"
plotly = "^5.24.0"
dash = "^2.17.1"
setuptools = "^74.1.0"
dash-bootstrap-components = "^1.6.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
